--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "i": "^0.3.7",
+    "npm": "^10.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
