--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-styled-components": "^6.12.0",
     "i": "^0.3.7",
     "npm": "^10.2.1",
     "react": "^18.2.0",
