--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^5.12.2",
     "gatsby-plugin-styled-components": "^6.12.0",
     "i": "^0.3.7",
     "npm": "^10.2.1",
