--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby": "^5.12.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^5.12.2",
+    "gatsby-plugin-page-creator": "^5.12.2",
     "gatsby-plugin-styled-components": "^6.12.0",
     "i": "^0.3.7",
     "npm": "^10.2.1",
