--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -30,10 +31,12 @@
     "npm": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
