--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "gatsby-plugin-eslint": "^4.0.4",
     "prettier": "3.0.3",
     "typescript": "^5.1.6"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:AndreFelipe97/fast-post-blog-pos.git",
+  "license": "MIT"
 }
