--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mdx-js/react": "^3.0.0",
     "axios": "^1.6.0",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint-config-prettier": "^9.0.0",
@@ -31,8 +32,10 @@
     "gatsby": "^5.12.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^5.12.2",
+    "gatsby-plugin-mdx": "^5.12.3",
     "gatsby-plugin-page-creator": "^5.12.2",
     "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-source-filesystem": "^5.12.1",
     "i": "^0.3.7",
     "npm": "^10.2.1",
     "react": "^18.2.0",
